@@ -1,3 +1,0 @@
-FROM debian:12
-
-RUN apt update && apt install -y git python3 && apt clean
