@@ -1,0 +1,4 @@
+ARG BASE_IMAGE
+FROM $BASE_IMAGE AS base
+
+RUN dnf upgrade -y && dnf install -y git python3 && dnf clean all
