@@ -44,6 +44,8 @@ Enhancements:
 - #7372 Add Git SHA to about screen and --version
 - #7373 Upgrade from Qt5 to Qt6 for more modern UI
 - #7374 Add missing DEB and RPM dependencies
+- #7376 Automated weekly build of Docker images for Linux runners
+
 
 # 1.14.6
 
